--- a/CourseRevit2025.FirstProject/CourseRevit2025.FirstProject.csproj
+++ b/CourseRevit2025.FirstProject/CourseRevit2025.FirstProject.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CourseRevit2025.FamilyLoader\CourseRevit2025.FamilyLoader.csproj" />
+  </ItemGroup>
+
 </Project>
